fix token dropdown vertical alignment

--- a/src/pages/Swap/override.css
+++ b/src/pages/Swap/override.css
@@ -7,3 +7,10 @@ html {
   overflow-x: hidden;
   background-color: rgb(242, 243, 248);
 }
+
+.ui.dropdown > .text > .image,
+.ui.dropdown > .text > img {
+  vertical-align: bottom;
+  margin-top: 0;
+  margin-bottom: 0;
+}
